<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gz_rviz</name>
  <version>0.0.1</version>
  <description>RViz developed using Gazebo libraries</description>

  <maintainer email="sarathkrishnan99@gmail.com">Sarathkrishnan Ramesh</maintainer>

  <license>Apache License, Version 2.0</license>

  <depend>geometry_msgs</depend>
  <depend>gz_rviz_common</depend>
  <depend>gz_rviz_plugins</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>

  <!-- Garden (default) -->
  <depend condition="$GZ_VERSION == 'garden'">gz-common5</depend>
  <depend condition="$GZ_VERSION == 'garden'">gz-gui7</depend>
  <depend condition="$GZ_VERSION == 'garden'">gz-math7</depend>
  <depend condition="$GZ_VERSION == ''">gz-common5</depend>
  <depend condition="$GZ_VERSION == ''">gz-gui7</depend>
  <depend condition="$GZ_VERSION == ''">gz-math7</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
